--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+body {
+  background-image: linear-gradient(
+  to right,
+  #ff8177 0%,
+  #ff867a 0%,
+  #ff8c7f 21%,
+  #f99185 52%,
+  #cf556c 78%,
+  #b12a5b 100%
+);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mainContainer {
+display: flex;
+justify-content: center;
+width: 100%;
+margin-top: 64px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dataContainer {
+display: flex;
+flex-direction: column;
+justify-content: center;
+max-width: 600px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+text-align: center;
+font-size: 32px;
+font-weight: 600;
+color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.bio {
+text-align: center;
+color: white;
+margin-top: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.waveButton:disabled,
+.link-btn:disabled {
+cursor: not-allowed;
+background: none;
+background-color: grey;
 }
+
+.wave-count-container {
+color: white;
+text-align: center;
+}
+
+.wave-count {
+color: #06e25b;
+}
+
+.input-text {
+height: 35px;
+width: 100%;
+text-align: center;
+float: left;
+box-sizing: border-box;
+border-radius: 5px;
+border: none;
+margin-top: 20px;
+}
+
+.input-text:focus {
+outline: none;
+}
+
+.btn {
+background: -webkit-linear-gradient(left, #06e25b, #047016);
+background-size: 200% 200%;
+animation: gradient-animation 4s ease infinite;
+margin-bottom: 15px;
+height: 30px;
+border: 0;
+width: auto;
+padding-left: 40px;
+padding-right: 40px;
+border-radius: 5px;
+cursor: pointer;
+font-size: 14px;
+font-weight: bold;
+color: white;
+
+}
+
+.link-table {
+margin-left: auto;
+margin-right:auto;
+margin-bottom: 50px;
+text-align: center;
+color: white;
+}
+
+.link-btn,
+.waveButton {
+cursor: pointer;
+border: 0;
+border-radius: 5px;
+width:100%;
+margin-top: 16px;
+}
+
+.message-div {
+color: white;
+border-style: solid;
+border-color: #06e25b;
+margin-top: 16px;
+margin-bottom: 16px;
+padding: 8px;
+}
+
+.message-detail {
+color:black;
+}
+
+.table {
+caption-side: bottom;
+border-collapse: collapse;
+}
+
+th {
+text-align: inherit;
+text-align: -webkit-match-parent;
+}
+
+thead,
+tbody,
+tfoot,
+tr,
+td,
+th {
+border-style: solid;
+border-width: 1;
+border-color: #06e25b;
+padding: 8px 8px 8px 8px;
+}
+
